--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@quasar/extras": "^1.13.5",
     "@vueuse/core": "^8.2.5",
     "@vueuse/head": "^0.7.5",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
     "prism-theme-vars": "^0.2.2",
+    "quasar": "^2.6.6",
     "vue": "^3.2.31",
     "vue-demi": "^0.12.5",
     "vue-i18n": "^9.1.9",
@@ -27,6 +29,7 @@
     "@antfu/eslint-config": "^0.20.2",
     "@iconify-json/carbon": "^1.1.3",
     "@intlify/vite-plugin-vue-i18n": "^4.0.0",
+    "@quasar/vite-plugin": "^1.0.9",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.3.1",
@@ -40,6 +43,7 @@
     "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-prism": "^2.2.3",
     "pnpm": "^6.32.6",
+    "sass": "1.32.0",
     "typescript": "^4.6.3",
     "unocss": "^0.30.13",
     "unplugin-auto-import": "^0.7.0",
