--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
     "quasar": "^2.6.6",
+    "storybook": "^6.4.22",
     "vue": "^3.2.31",
     "vue-demi": "^0.12.5",
     "vue-i18n": "^9.1.9",
@@ -29,6 +30,7 @@
     "@iconify-json/carbon": "^1.1.3",
     "@intlify/vite-plugin-vue-i18n": "^4.0.0",
     "@quasar/vite-plugin": "^1.0.9",
+    "@storybook/builder-vite": "^0.1.33",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.3.1",
