build: add apollo client for upload and packages for convert html to picture

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@vue/apollo-composable": "^4.0.0-alpha.17",
     "@vueuse/core": "^8.2.5",
     "@vueuse/head": "^0.7.5",
+    "apollo-upload-client": "^17.0.0",
     "graphql": "^16.5.0",
     "graphql-tag": "^2.12.6",
+    "html-to-image": "^1.9.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
     "quasar": "^2.6.6",
@@ -35,6 +37,7 @@
     "@intlify/vite-plugin-vue-i18n": "^4.0.0",
     "@quasar/vite-plugin": "^1.0.9",
     "@storybook/builder-vite": "^0.1.33",
+    "@types/apollo-upload-client": "^17.0.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.3.1",
